--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -31,6 +31,7 @@
         	<span class="glyphicon glyphicon-log-in" aria-hidden="true"></span> Sign in
         </button>
       </form>
+      <a class="btn btn-lg btn-primary btn-block" th:href="@{/register}"> Register </a>
 
     </div> <!-- /container -->
 
