--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -15,7 +15,7 @@
 <body>
 <div class="container">
 
-    <form class="form-signin" th:action="@{/adduser}" th:obecjt="${user}" method="post">
+    <form class="form-signin" th:action="@{/adduser}" th:object="${user}" method="post">
         <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}" />
         <h2 class="form-signin-heading">Register</h2>
         <label for="username" class="sr-only" th:field="*{username}">Username</label>
